--- a/src/projeto_aplicado.ipynb
+++ b/src/projeto_aplicado.ipynb
@@ -23,6 +23,7 @@
       "Requirement already satisfied: opencv-python in /opt/conda/lib/python3.11/site-packages (4.10.0.84)\n",
       "Requirement already satisfied: tensorflow in /opt/conda/lib/python3.11/site-packages (2.17.0)\n",
       "Requirement already satisfied: keras in /opt/conda/lib/python3.11/site-packages (3.5.0)\n",
+      "Requirement already satisfied: opencv-python-headless in /opt/conda/lib/python3.11/site-packages (4.10.0.84)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.11/site-packages (from pandas) (2024.1)\n",
@@ -74,31 +75,12 @@
     }
    ],
    "source": [
-    "!pip install numpy pandas matplotlib scikit-learn opencv-python tensorflow keras"
+    "!pip install numpy pandas matplotlib scikit-learn opencv-python tensorflow keras opencv-python-headless"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "58c991e9-d6e5-4cbf-9a90-e415569f7d2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: opencv-python-headless in /opt/conda/lib/python3.11/site-packages (4.10.0.84)\n",
-      "Requirement already satisfied: numpy>=1.21.2 in /opt/conda/lib/python3.11/site-packages (from opencv-python-headless) (1.26.4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install opencv-python-headless"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "1506d849",
    "metadata": {},
    "outputs": [
@@ -106,15 +88,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-19 18:42:29.025761: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-19 18:42:29.046666: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-09-19 18:42:29.237325: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-09-19 18:42:29.447437: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-09-19 18:42:29.624856: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-09-19 18:42:29.678298: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-09-19 18:42:30.000650: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-09-27 18:42:09.753761: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-09-27 18:42:09.773706: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-09-27 18:42:09.920300: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-09-27 18:42:10.048248: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-09-27 18:42:10.157466: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-09-27 18:42:10.188647: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-09-27 18:42:10.422513: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-19 18:42:32.203455: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-09-27 18:42:12.092746: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -136,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "4b1ed72e",
    "metadata": {},
    "outputs": [],
@@ -160,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a5430f1b",
    "metadata": {},
    "outputs": [],
@@ -185,7 +167,7 @@
     "\n",
     "    model.add(layers.Flatten())  # Achata a saída para alimentar a camada densa\n",
     "    model.add(layers.Dense(128, activation='relu'))  # Camada densa\n",
-    "    model.add(layers.Dense(1, activation='sigmoid'))  # Camada de saída para classificação binária\n",
+    "    model.add(layers.Dense(3, activation='softmax'))\n",
     "\n",
     "    return model\n",
     "\n",
@@ -194,7 +176,7 @@
     "cnn_model = create_cnn(input_shape)\n",
     "\n",
     "# Compilando o modelo\n",
-    "cnn_model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n"
+    "cnn_model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n"
    ]
   },
   {
@@ -207,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "5b34fb4c",
    "metadata": {},
    "outputs": [
@@ -215,19 +197,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 0 images belonging to 0 classes.\n",
-      "Found 0 images belonging to 0 classes.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 32\u001b[0m\n\u001b[1;32m     22\u001b[0m validation_generator \u001b[38;5;241m=\u001b[39m train_datagen\u001b[38;5;241m.\u001b[39mflow_from_directory(\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./data_set\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     24\u001b[0m     target_size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m224\u001b[39m, \u001b[38;5;241m224\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m     subset\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalidation\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     29\u001b[0m )\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Treinamento do modelo\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mfit(train_generator, validation_data\u001b[38;5;241m=\u001b[39mvalidation_generator, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+      "Found 3 images belonging to 3 classes.\n",
+      "Found 3 images belonging to 3 classes.\n",
+      "Epoch 1/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 240ms/step - accuracy: 0.2917 - loss: 1.0642 - val_accuracy: 0.6667 - val_loss: 0.7301\n",
+      "Epoch 2/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 160ms/step - accuracy: 0.7083 - loss: 0.8743 - val_accuracy: 0.0000e+00 - val_loss: 1.2363\n",
+      "Epoch 3/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 152ms/step - accuracy: 0.7083 - loss: 0.8543 - val_accuracy: 0.3333 - val_loss: 1.0409\n",
+      "Epoch 4/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 166ms/step - accuracy: 0.8333 - loss: 0.6512 - val_accuracy: 0.6667 - val_loss: 0.7351\n",
+      "Epoch 5/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 157ms/step - accuracy: 0.4583 - loss: 1.1511 - val_accuracy: 0.0000e+00 - val_loss: 1.3703\n",
+      "Epoch 6/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 177ms/step - accuracy: 0.1667 - loss: 1.2869 - val_accuracy: 0.0000e+00 - val_loss: 1.7750\n",
+      "Epoch 7/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 182ms/step - accuracy: 0.5417 - loss: 1.0685 - val_accuracy: 0.0000e+00 - val_loss: 1.2966\n",
+      "Epoch 8/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 159ms/step - accuracy: 0.2917 - loss: 1.4165 - val_accuracy: 0.3333 - val_loss: 1.0623\n",
+      "Epoch 9/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 213ms/step - accuracy: 0.4583 - loss: 1.1359 - val_accuracy: 0.6667 - val_loss: 0.9465\n",
+      "Epoch 10/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 170ms/step - accuracy: 0.8333 - loss: 0.8922 - val_accuracy: 0.3333 - val_loss: 1.1789\n",
+      "Epoch 11/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 181ms/step - accuracy: 0.1667 - loss: 1.0786 - val_accuracy: 0.0000e+00 - val_loss: 1.3446\n",
+      "Epoch 12/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 179ms/step - accuracy: 0.7083 - loss: 0.6448 - val_accuracy: 0.3333 - val_loss: 1.1630\n",
+      "Epoch 13/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 196ms/step - accuracy: 0.8333 - loss: 0.5206 - val_accuracy: 0.6667 - val_loss: 0.8850\n",
+      "Epoch 14/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 190ms/step - accuracy: 0.2917 - loss: 0.9211 - val_accuracy: 0.3333 - val_loss: 1.1016\n",
+      "Epoch 15/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 202ms/step - accuracy: 0.4583 - loss: 0.9780 - val_accuracy: 0.3333 - val_loss: 1.5799\n",
+      "Epoch 16/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 172ms/step - accuracy: 0.4583 - loss: 1.2840 - val_accuracy: 0.3333 - val_loss: 1.1800\n",
+      "Epoch 17/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 180ms/step - accuracy: 0.4583 - loss: 0.9323 - val_accuracy: 0.6667 - val_loss: 1.2953\n",
+      "Epoch 18/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 153ms/step - accuracy: 0.8333 - loss: 0.3837 - val_accuracy: 0.0000e+00 - val_loss: 2.2362\n",
+      "Epoch 19/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 159ms/step - accuracy: 0.4583 - loss: 0.9130 - val_accuracy: 0.0000e+00 - val_loss: 2.3335\n",
+      "Epoch 20/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 207ms/step - accuracy: 0.8333 - loss: 0.3617 - val_accuracy: 0.3333 - val_loss: 1.7732\n",
+      "Epoch 21/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 183ms/step - accuracy: 0.5417 - loss: 0.6508 - val_accuracy: 0.3333 - val_loss: 1.1697\n",
+      "Epoch 22/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 174ms/step - accuracy: 0.4583 - loss: 0.5700 - val_accuracy: 0.3333 - val_loss: 1.2109\n",
+      "Epoch 23/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 150ms/step - accuracy: 0.4583 - loss: 0.5053 - val_accuracy: 0.3333 - val_loss: 1.5622\n",
+      "Epoch 24/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 152ms/step - accuracy: 0.4583 - loss: 0.6206 - val_accuracy: 0.3333 - val_loss: 1.6213\n",
+      "Epoch 25/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 174ms/step - accuracy: 0.7083 - loss: 0.4431 - val_accuracy: 0.0000e+00 - val_loss: 2.4202\n",
+      "Epoch 26/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 168ms/step - accuracy: 0.7083 - loss: 0.8976 - val_accuracy: 0.3333 - val_loss: 1.2457\n",
+      "Epoch 27/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 150ms/step - accuracy: 1.0000 - loss: 0.4890 - val_accuracy: 0.3333 - val_loss: 1.9426\n",
+      "Epoch 28/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 178ms/step - accuracy: 0.7083 - loss: 0.7047 - val_accuracy: 0.0000e+00 - val_loss: 2.0240\n",
+      "Epoch 29/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 167ms/step - accuracy: 0.8333 - loss: 0.3416 - val_accuracy: 0.3333 - val_loss: 1.3196\n",
+      "Epoch 30/30\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 173ms/step - accuracy: 1.0000 - loss: 0.0954 - val_accuracy: 0.3333 - val_loss: 1.7155\n"
      ]
     }
    ],
@@ -240,7 +271,7 @@
     "    shear_range=0.2,\n",
     "    zoom_range=0.2,\n",
     "    horizontal_flip=True,\n",
-    "    validation_split=0.2\n",
+    "    validation_split=0.5\n",
     ")\n",
     "\n",
     "# Diretório das imagens de treino e validação\n",
@@ -248,7 +279,8 @@
     "    './data_set',\n",
     "    target_size=(224, 224),\n",
     "    color_mode='grayscale',\n",
-    "    batch_size=32,\n",
+    "    batch_size=1, # mudar para 8 quando tiver dataset completo\n",
+    "    # aumenta o tamanho de processamento por vez, reduzindo peculiaridades de uma única imagem afetem a acurácia do modelo\n",
     "    class_mode='categorical',\n",
     "    subset='training'\n",
     ")\n",
@@ -257,13 +289,14 @@
     "    './data_set',\n",
     "    target_size=(224, 224),\n",
     "    color_mode='grayscale',\n",
-    "    batch_size=32,\n",
+    "    batch_size=1, # mudar para 8 quando tiver dataset completo\n",
+    "    # aumenta o tamanho de processamento por vez, reduzindo peculiaridades de uma única imagem afetem a acurácia do modelo\n",
     "    class_mode='categorical',\n",
     "    subset='validation'\n",
     ")\n",
     "\n",
     "# Treinamento do modelo\n",
-    "history = model.fit(train_generator, validation_data=validation_generator, epochs=10)"
+    "history = cnn_model.fit(train_generator, validation_data=validation_generator, epochs=30)"
    ]
   },
   {
@@ -276,13 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a386ec43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 83ms/step - accuracy: 0.2917 - loss: 1.8705   \n",
+      "Validação - Loss: 1.5646963119506836, Acurácia: 0.3333333432674408\n"
+     ]
+    }
+   ],
    "source": [
     "# Avaliando o modelo no conjunto de validação\n",
-    "val_loss, val_acc = model.evaluate(validation_generator)\n",
+    "val_loss, val_acc = cnn_model.evaluate(validation_generator)\n",
     "print(f\"Validação - Loss: {val_loss}, Acurácia: {val_acc}\")"
    ]
   },
@@ -296,20 +338,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ae6ef124",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
+      "Predição: [[0.11641166 0.10216209 0.7814262 ]]\n",
+      "Classe prevista: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Função para prever a imagem\n",
     "def predict_image(image_path, model):\n",
     "    img = preprocess_image(image_path)\n",
     "    img = np.expand_dims(img, axis=0)  # Adiciona uma dimensão para batch\n",
     "    prediction = model.predict(img)\n",
-    "    return prediction\n",
+    "    predicted_class = np.argmax(prediction)  # Retorna o índice da classe com maior probabilidade\n",
+    "    return predicted_class, prediction\n",
     "\n",
-    "result = predict_image('path_to_new_xray_image.jpg', model)\n",
-    "print(f'Predição: {result}')"
+    "predicted_class, result = predict_image('./test-data/001.jpg', cnn_model)\n",
+    "print(f'Predição: {result}')\n",
+    "print(f'Classe prevista: {predicted_class}')"
    ]
   }
  ],
