--- a/src/projeto_aplicado.ipynb
+++ b/src/projeto_aplicado.ipynb
@@ -132,14 +132,11 @@
    "id": "4b1ed72e",
    "metadata": {},
    "outputs": [],
-   "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
     "    img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "    img_resized = cv2.resize(img, (224, 224))\n",
-    "    img_normalized = img_resized / 255.0\n",
-    "    return img_normalized"
-    "    return img_normalized"
+    "    img_normalized = img_resized / 255.0\n"
    ]
   },
   {
@@ -490,10 +487,10 @@
    "id": "0c8b8cf4-89af-4aa1-bc2b-c4f160b02f93",
    "metadata": {},
    "source": [
-    "### Ao inicializar o modelo os pesos da rede neural são inicializados de forma aleatória, e como o processo de otimização do modelo começa a partir de diferentes pontos cada execução pode levar a resultados diferentes, por isso, cada vez que o código for executado os resultados não serão exatamente os mesmos, mas aproximados.\n",
-    "\n",
-    "\n",
-    "### image augmentation: técnicas de rotação, deslocamento, zoom e etc. aplicadas na imagem para criar novas variações para realizar o treinamento do modelo, sendo também um processo aleatório."
+    "## Porque resultados sempre são diferentes:\n",
+    "- Ao inicializar o modelo os pesos da rede neural são inicializados de forma aleatória, e como o processo de otimização do modelo começa a partir de diferentes pontos cada execução pode levar a resultados diferentes, por isso, cada vez que o código for executado os resultados não serão exatamente os mesmos, mas aproximados.\n",
+    "- Image Augmentation: técnicas de rotação, deslocamento, zoom e etc. aplicadas na imagem para criar novas variações para realizar o treinamento do modelo, sendo também um processo aleatório.\n",
+    "- Shuffling: Durante o treinamento, os dados de treino são embaralhados a cada época. Isso garante que o modelo não aprenda de forma dependente da ordem dos exemplos, mas também pode fazer com que os resultados variem."
    ]
   },
   {
